tests/spec/emit/snapshots/cast_shift_with_constant_arithmetic_base_pins.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn scale(level: int) -> float64 {
    ((1 + 1) << level) as float64
  }
---
package main

func scale(level int) float64 {
	return float64(int((1 + 1) << level))
}
