tests/spec/emit/snapshots/cast_shift_with_local_const_count_needs_no_pin.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn scale() -> float64 {
    const SHIFT = 60 + 8
    (1 << SHIFT) as float64
  }
---
package main

func scale() float64 {
	const Shift int = 60 + 8
	return float64(1 << Shift)
}
