tests/spec/emit/snapshots/cast_string_to_byte_slice.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> Slice<byte> {
    "hello" as Slice<byte>
  }
---
package main

func test() []byte {
	return ([]byte)("hello")
}
