tests/spec/emit/snapshots/cast_type_alias_to_fn.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  type Handler = fn(int) -> string
  
  fn my_handler(x: int) -> string {
    "ok"
  }
  
  fn test() -> fn(int) -> string {
    let h = my_handler as Handler
    h as fn(int) -> string
  }
---
package main

type Handler func(int) string

func myHandler(_ int) string {
	return "ok"
}

func test() func(int) string {
	h := Handler(myHandler)
	return (func(int) string)(h)
}
