tests/spec/emit/snapshots/cast_underlying_to_tuple_struct.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Wrapper(int)
  
  fn test() -> Wrapper {
    let n = 42
    n as Wrapper
  }
---
package main

type Wrapper int

func test() Wrapper {
	n := 42
	return Wrapper(n)
}
